# PARKY

./: Makefile  Makefile.am  Makefile.in  README.md  agentParking1.txt  config.h  config.status  configure  configure.in  parking.glade.bak  parking.gladep.bak  parkings.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  agentParking1.c  agentParking1.h  agentParking1.txt  callbacks.c  callbacks.h  gererParking.c  gererParking.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  parking  parkings.txt
src/.deps/: agentParking1.Po  callbacks.Po  gererParking.Po
